--- a/src/styles/config/_dark-colors.scss
+++ b/src/styles/config/_dark-colors.scss
@@ -46,7 +46,7 @@ $colors: (
     install-background-hover: hsl(207 23% 26%),
     install-foreground: hsl(0 0% 100%),
     install-foreground-hover: hsl(0 0% 100%),
-    discrete-background: rgba(245, 245, 245, 0.1),
+    discrete-background: hsl(0 0% 96% / 0.1),
     discrete-background-hover: hsl(261 52% 59%),
     discrete-foreground: hsl(0 0% 100%),
     discrete-foreground-hover: hsl(0 0% 100%)
