Update UI files

--- a/static/ui/html/component/container-preview.html
+++ b/static/ui/html/component/container-preview.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Spruce UI - Container</title>
-    <link rel="icon" href="http://localhost:3000/img/favicon.svg" type="image/svg+xml"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/spruce.css?time=1663239436032"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/container.css?time=1663239436032"/>
-    <style>
-      .bit {
-        align-items: center;
-        background-color: hsl(0 0% 95%);
-        border-radius: 0.25rem;
-        font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
-        display: flex;
-        justify-content: center;
-        margin-block: 1rem;
-        padding: 1rem;
-      }
-      
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="bit">.container</div>
-    </div>
-    <div class="container container--wide">
-      <div class="bit">.container--wide</div>
-    </div>
-    <div class="container container--narrow">
-      <div class="bit">.container--narrow</div>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spruce UI - Container</title>
+  <link rel="icon" href="https://sprucecss.com/ui/img/favicon.svg" type="image/svg+xml" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/spruce.css?time=1663244617058" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/container.css?time=1663244617058" />
+  <style>
+    .bit {
+      align-items: center;
+      background-color: hsl(0 0% 95%);
+      border-radius: 0.25rem;
+      font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+      display: flex;
+      justify-content: center;
+      margin-block: 1rem;
+      padding: 1rem;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="bit">.container</div>
+  </div>
+  <div class="container container--wide">
+    <div class="bit">.container--wide</div>
+  </div>
+  <div class="container container--narrow">
+    <div class="bit">.container--narrow</div>
+  </div>
+</body>
+
 </html>
