--- a/static/ui/html/component/post-author.html
+++ b/static/ui/html/component/post-author.html
@@ -1,1 +1,4 @@
-<a class="post-author" href="#"><img class="post-author__avatar" src="https://secure.gravatar.com/avatar/fd9479a898c593601efd2fe758a86dba?s=96&amp;d=mm&amp;r=g" alt="" aria-hidden="true" width="38" height="38"/><span class="post-author__name">by Adam Laki</span></a>
+<a class="post-author" href="#">
+  <img class="post-author__avatar" src="https://secure.gravatar.com/avatar/fd9479a898c593601efd2fe758a86dba?s=96&amp;d=mm&amp;r=g" alt="" aria-hidden="true" width="38" height="38" />
+  <span class="post-author__name">by Adam Laki</span>
+</a>
