--- a/static/ui/html/component/skip-link-preview.html
+++ b/static/ui/html/component/skip-link-preview.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Spruce UI - Skip Link</title>
-    <link rel="icon" href="http://localhost:3000/img/favicon.svg" type="image/svg+xml"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/spruce.css?time=1663239436223"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/container.css?time=1663239436223"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/skip-link.css?time=1663239436223"/>
-    <style>
-      body {
-        padding-block: 3rem;
-      }
-      
-    </style>
-  </head>
-  <body><a class="btn btn--primary skip-link" href="#content">Skip to Content</a>
-    <div class="container">
-      <header><a href="#">This is the site header</a></header>
-      <main id="content" tabindex="-1"><a href="#">This is the main content</a></main>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spruce UI - Skip Link</title>
+  <link rel="icon" href="https://sprucecss.com/ui/img/favicon.svg" type="image/svg+xml" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/spruce.css?time=1663244617196" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/container.css?time=1663244617196" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/skip-link.css?time=1663244617196" />
+  <style>
+    body {
+      padding-block: 3rem;
+    }
+  </style>
+</head>
+
+<body>
+  <a class="btn btn--primary skip-link" href="#content">Skip to Content</a>
+  <div class="container">
+    <header>
+      <a href="#">This is the site header</a>
+    </header>
+    <main id="content" tabindex="-1">
+      <a href="#">This is the main content</a>
+    </main>
+  </div>
+</body>
+
 </html>
