--- a/static/ui/html/component/accordion-list-preview.html
+++ b/static/ui/html/component/accordion-list-preview.html
@@ -1,81 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Spruce UI - Accordion List</title>
-    <link rel="icon" href="http://localhost:3000/img/favicon.svg" type="image/svg+xml"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/spruce.css?time=1663239435832"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/container.css?time=1663239435832"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/accordion-card.css?time=1663239435832"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/accordion-list.css?time=1663239435832"/>
-    <style>
-      body { padding-block: 3rem; }
-      .h4 { margin-block: 0 1rem; }
-      div + .h4 { margin-block-start: 3rem; }
-      
-    </style>
-  </head>
-  <body>
-    <div class="container container--narrow">
-      <h2 class="h4">Boxed List</h2>
-      <div class="accordion-list--boxed">
-        <div class="accordion-card accordion-card--box">
-          <h3 class="accordion-card__title">Why Make Another CSS Framework?</h3>
-          <div class="accordion-card__content">
-            <p>As you may know, there are many CSS frameworks (hundreds of them, and a lot of them are not maintained today). Everybody can choose one that suits their work style or project requirements. So why make another one? It is certainly not because we can do it better but because we want to do it our way. We want to be in control and make decisions.</p>
-          </div>
-        </div>
-        <div class="accordion-card accordion-card--box">
-          <h3 class="accordion-card__title">It Is Opinionated</h3>
-          <div class="accordion-card__content">
-            <p>Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for (strictly) any particular solution (because there is always more than one), but we will show you what we think is the best for us (and maybe for you too). We don’t believe there is a good or bad solution, but we can learn from any of them.</p>
-          </div>
-        </div>
-        <div class="accordion-card accordion-card--box">
-          <h3 class="accordion-card__title">We Left the Grid Out</h3>
-          <div class="accordion-card__content">
-            <p>One controversial decision we made with Spruce is to leave a classical grid system out. Because of the late CSS layout model developments like Flexbox and Grid, we think it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it the modern way.</p>
-          </div>
-        </div>
-        <div class="accordion-card accordion-card--box">
-          <h3 class="accordion-card__title">Coding Style Guide and Practices</h3>
-          <div class="accordion-card__content">
-            <p>Where it is possible, we use elements and/or attributes to style elements, but it is still a class-based framework.</p>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spruce UI - Accordion List</title>
+  <link rel="icon" href="https://sprucecss.com/ui/img/favicon.svg" type="image/svg+xml" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/spruce.css?time=1663244616963" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/container.css?time=1663244616963" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/accordion-card.css?time=1663244616963" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/accordion-list.css?time=1663244616963" />
+  <style>
+    body {
+      padding-block: 3rem;
+    }
+
+    .h4 {
+      margin-block: 0 1rem;
+    }
+
+    div+.h4 {
+      margin-block-start: 3rem;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container container--narrow">
+    <h2 class="h4">Boxed List</h2>
+    <div class="accordion-list--boxed">
+      <div class="accordion-card accordion-card--box">
+        <h3 class="accordion-card__title">Why Make Another CSS Framework?</h3>
+        <div class="accordion-card__content">
+          <p>As you may know, there are many CSS frameworks (hundreds of them, and a lot of them are not maintained today). Everybody can choose one that suits their work style or project requirements. So why make another one? It is certainly not because we can do it better but because we want to do it our way. We want to be in control and make decisions.</p>
         </div>
       </div>
-      <h2 class="h4">Stacked List</h2>
-      <div class="accordion-list--stacked">
-        <div class="accordion-card undefined">
-          <h3 class="accordion-card__title">Why Make Another CSS Framework?</h3>
-          <div class="accordion-card__content">
-            <p>As you may know, there are many CSS frameworks (hundreds of them, and a lot of them are not maintained today). Everybody can choose one that suits their work style or project requirements. So why make another one? It is certainly not because we can do it better but because we want to do it our way. We want to be in control and make decisions.</p>
-          </div>
+      <div class="accordion-card accordion-card--box">
+        <h3 class="accordion-card__title">It Is Opinionated</h3>
+        <div class="accordion-card__content">
+          <p>Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for (strictly) any particular solution (because there is always more than one), but we will show you what we think is the best for us (and maybe for you too). We don’t believe there is a good or bad solution, but we can learn from any of them.</p>
         </div>
-        <div class="accordion-card undefined">
-          <h3 class="accordion-card__title">It Is Opinionated</h3>
-          <div class="accordion-card__content">
-            <p>Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for (strictly) any particular solution (because there is always more than one), but we will show you what we think is the best for us (and maybe for you too). We don’t believe there is a good or bad solution, but we can learn from any of them.</p>
-          </div>
+      </div>
+      <div class="accordion-card accordion-card--box">
+        <h3 class="accordion-card__title">We Left the Grid Out</h3>
+        <div class="accordion-card__content">
+          <p>One controversial decision we made with Spruce is to leave a classical grid system out. Because of the late CSS layout model developments like Flexbox and Grid, we think it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it the modern way.</p>
         </div>
-        <div class="accordion-card undefined">
-          <h3 class="accordion-card__title">We Left the Grid Out</h3>
-          <div class="accordion-card__content">
-            <p>One controversial decision we made with Spruce is to leave a classical grid system out. Because of the late CSS layout model developments like Flexbox and Grid, we think it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it the modern way.</p>
-          </div>
-        </div>
-        <div class="accordion-card undefined">
-          <h3 class="accordion-card__title">Coding Style Guide and Practices</h3>
-          <div class="accordion-card__content">
-            <p>Where it is possible, we use elements and/or attributes to style elements, but it is still a class-based framework.</p>
-          </div>
+      </div>
+      <div class="accordion-card accordion-card--box">
+        <h3 class="accordion-card__title">Coding Style Guide and Practices</h3>
+        <div class="accordion-card__content">
+          <p>Where it is possible, we use elements and/or attributes to style elements, but it is still a class-based framework.</p>
         </div>
       </div>
     </div>
-    <script src="http://localhost:3000/js/component/accordion-card.js" type="module"></script>
-  </body>
+    <h2 class="h4">Stacked List</h2>
+    <div class="accordion-list--stacked">
+      <div class="accordion-card undefined">
+        <h3 class="accordion-card__title">Why Make Another CSS Framework?</h3>
+        <div class="accordion-card__content">
+          <p>As you may know, there are many CSS frameworks (hundreds of them, and a lot of them are not maintained today). Everybody can choose one that suits their work style or project requirements. So why make another one? It is certainly not because we can do it better but because we want to do it our way. We want to be in control and make decisions.</p>
+        </div>
+      </div>
+      <div class="accordion-card undefined">
+        <h3 class="accordion-card__title">It Is Opinionated</h3>
+        <div class="accordion-card__content">
+          <p>Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for (strictly) any particular solution (because there is always more than one), but we will show you what we think is the best for us (and maybe for you too). We don’t believe there is a good or bad solution, but we can learn from any of them.</p>
+        </div>
+      </div>
+      <div class="accordion-card undefined">
+        <h3 class="accordion-card__title">We Left the Grid Out</h3>
+        <div class="accordion-card__content">
+          <p>One controversial decision we made with Spruce is to leave a classical grid system out. Because of the late CSS layout model developments like Flexbox and Grid, we think it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it the modern way.</p>
+        </div>
+      </div>
+      <div class="accordion-card undefined">
+        <h3 class="accordion-card__title">Coding Style Guide and Practices</h3>
+        <div class="accordion-card__content">
+          <p>Where it is possible, we use elements and/or attributes to style elements, but it is still a class-based framework.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://sprucecss.com/ui/js/component/accordion-card.js?time=1663244616963" type="module"></script>
+</body>
+
 </html>
