--- a/static/ui/html/component/theme-switcher-preview.html
+++ b/static/ui/html/component/theme-switcher-preview.html
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Spruce UI - Theme Switcher</title>
-    <link rel="icon" href="http://localhost:3000/img/favicon.svg" type="image/svg+xml"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap"/>
-    <link rel="stylesheet" href="http://localhost:3000/css/spruce.css?time=1663239436274"/>
-    <script>(() => {
-  const darkQuery = window.matchMedia('(prefers-color-scheme: dark)');
-  const preferredTheme = localStorage.getItem('preferred-theme');
 
-  function setTheme(theme) {
-    if (theme === 'dark') {
-      document.documentElement.setAttribute('data-theme-mode', 'dark');
-    } else if (theme === 'system' && darkQuery.matches) {
-      document.documentElement.setAttribute('data-theme-mode', 'dark');
-    } else {
-      document.documentElement.removeAttribute('data-theme-mode');
-    }
-  }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Spruce UI - Theme Switcher</title>
+  <link rel="icon" href="https://sprucecss.com/ui/img/favicon.svg" type="image/svg+xml" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&amp;family=Sora:wght@400;500;600;700&amp;display=swap" />
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/spruce.css?time=1663244617224" />
+  <script>
+    (() => {
+      const darkQuery = window.matchMedia('(prefers-color-scheme: dark)');
+      const preferredTheme = localStorage.getItem('preferred-theme');
 
-  setTheme(preferredTheme || (darkQuery.matches ? 'dark' : 'light'));
-})();
-
-    </script>
-    <link rel="stylesheet" href="http://localhost:3000/css/component/theme-switcher.css?time=1663239436274"/>
-    <style>
-      body {
-        align-items: center;
-        display: flex;
-        justify-content: center;
-        padding-block: 6em;
-        padding-inline: 1rem;
+      function setTheme(theme) {
+        if (theme === 'dark') {
+          document.documentElement.setAttribute('data-theme-mode', 'dark');
+        } else if (theme === 'system' && darkQuery.matches) {
+          document.documentElement.setAttribute('data-theme-mode', 'dark');
+        } else {
+          document.documentElement.removeAttribute('data-theme-mode');
+        }
       }
-      
-    </style>
-  </head>
-  <body>
-    <div class="theme-switcher" id="theme-switcher"><span class="theme-switcher__icon">
-            <svg class="icon icon-system" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" width="18" height="18" style="fill:currentColor;"><path d='M15,13.5c0.825,0 1.5,-0.675 1.5,-1.5l0,-7.5c0,-0.825 -0.675,-1.5 -1.5,-1.5l-12,0c-0.825,0 -1.5,0.675 -1.5,1.5l0,7.5c0,0.825 0.675,1.5 1.5,1.5l-2.25,0c-0.413,0 -0.75,0.337 -0.75,0.75c0,0.413 0.338,0.75 0.75,0.75l16.5,0c0.413,0 0.75,-0.337 0.75,-0.75c0,-0.413 -0.337,-0.75 -0.75,-0.75l-2.25,0Zm-11.25,-9l10.5,0c0.413,0 0.75,0.338 0.75,0.75l0,6c0,0.413 -0.337,0.75 -0.75,0.75l-10.5,0c-0.412,0 -0.75,-0.337 -0.75,-0.75l0,-6c0,-0.412 0.338,-0.75 0.75,-0.75Z'/>
-            </svg>
-            <svg class="icon icon-light" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" width="18" height="18" style="fill:currentColor;"><path d='M9,4.909c-2.258,0 -4.091,1.833 -4.091,4.091c0,2.258 1.833,4.091 4.091,4.091c2.258,-0 4.091,-1.833 4.091,-4.091c-0,-2.258 -1.833,-4.091 -4.091,-4.091Zm-8.182,4.909l1.637,0c0.45,0 0.818,-0.368 0.818,-0.818c-0,-0.45 -0.368,-0.818 -0.818,-0.818l-1.637,-0c-0.45,-0 -0.818,0.368 -0.818,0.818c0,0.45 0.368,0.818 0.818,0.818Zm14.727,0l1.637,0c0.45,0 0.818,-0.368 0.818,-0.818c0,-0.45 -0.368,-0.818 -0.818,-0.818l-1.637,-0c-0.45,-0 -0.818,0.368 -0.818,0.818c0,0.45 0.368,0.818 0.818,0.818Zm-7.363,-9l-0,1.637c-0,0.45 0.368,0.818 0.818,0.818c0.45,-0 0.818,-0.368 0.818,-0.818l0,-1.637c0,-0.45 -0.368,-0.818 -0.818,-0.818c-0.45,0 -0.818,0.368 -0.818,0.818Zm-0,14.727l-0,1.637c-0,0.45 0.368,0.818 0.818,0.818c0.45,0 0.818,-0.368 0.818,-0.818l0,-1.637c0,-0.45 -0.368,-0.818 -0.818,-0.818c-0.45,0 -0.818,0.368 -0.818,0.818Zm-4.099,-12.616c-0.319,-0.319 -0.843,-0.319 -1.154,0c-0.319,0.319 -0.319,0.843 0,1.154l0.867,0.867c0.319,0.319 0.843,0.319 1.154,0c0.311,-0.319 0.319,-0.843 0,-1.154l-0.867,-0.867Zm10.121,10.121c-0.319,-0.319 -0.843,-0.319 -1.154,0c-0.319,0.319 -0.319,0.843 0,1.154l0.867,0.867c0.319,0.319 0.843,0.319 1.154,-0c0.319,-0.319 0.319,-0.843 -0,-1.154l-0.867,-0.867Zm0.867,-8.967c0.319,-0.319 0.319,-0.843 -0,-1.154c-0.319,-0.319 -0.843,-0.319 -1.154,0l-0.867,0.867c-0.319,0.319 -0.319,0.843 0,1.154c0.319,0.311 0.843,0.319 1.154,0l0.867,-0.867Zm-10.121,10.121c0.319,-0.319 0.319,-0.843 0,-1.154c-0.319,-0.319 -0.843,-0.319 -1.154,0l-0.867,0.867c-0.319,0.319 -0.319,0.843 0,1.154c0.319,0.311 0.843,0.319 1.154,-0l0.867,-0.867Z'/>
-            </svg>
-            <svg class="icon icon-dark" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" width="18" height="18" style="fill:currentColor;"><path d='M9,0c-4.97,0 -9,4.03 -9,9c0,4.97 4.03,9 9,9c4.97,0 9,-4.03 9,-9c0,-0.46 -0.04,-0.92 -0.1,-1.36c-0.98,1.37 -2.58,2.26 -4.4,2.26c-2.98,0 -5.4,-2.42 -5.4,-5.4c0,-1.81 0.89,-3.42 2.26,-4.4c-0.44,-0.06 -0.9,-0.1 -1.36,-0.1Z'/>
-            </svg></span>
-      <select class="form-control form-control--sm theme-switcher__select" id="select-theme-mode" aria-label="Select a theme">
-        <option value="system">System</option>
-        <option value="light">Light</option>
-        <option value="dark">Dark</option>
-      </select>
-    </div>
-    <script src="http://localhost:3000/js/component/theme-switcher.js" type="module"></script>
-  </body>
+
+      setTheme(preferredTheme || (darkQuery.matches ? 'dark' : 'light'));
+    })();
+  </script>
+  <link rel="stylesheet" href="https://sprucecss.com/ui/css/component/theme-switcher.css?time=1663244617224" />
+  <style>
+    body {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      padding-block: 6em;
+      padding-inline: 1rem;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="theme-switcher" id="theme-switcher">
+    <span class="theme-switcher__icon">
+      <svg class="icon icon-system" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" width="18" height="18" style="fill:currentColor;">
+        <path d='M15,13.5c0.825,0 1.5,-0.675 1.5,-1.5l0,-7.5c0,-0.825 -0.675,-1.5 -1.5,-1.5l-12,0c-0.825,0 -1.5,0.675 -1.5,1.5l0,7.5c0,0.825 0.675,1.5 1.5,1.5l-2.25,0c-0.413,0 -0.75,0.337 -0.75,0.75c0,0.413 0.338,0.75 0.75,0.75l16.5,0c0.413,0 0.75,-0.337 0.75,-0.75c0,-0.413 -0.337,-0.75 -0.75,-0.75l-2.25,0Zm-11.25,-9l10.5,0c0.413,0 0.75,0.338 0.75,0.75l0,6c0,0.413 -0.337,0.75 -0.75,0.75l-10.5,0c-0.412,0 -0.75,-0.337 -0.75,-0.75l0,-6c0,-0.412 0.338,-0.75 0.75,-0.75Z' />
+      </svg>
+      <svg class="icon icon-light" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" width="18" height="18" style="fill:currentColor;">
+        <path d='M9,4.909c-2.258,0 -4.091,1.833 -4.091,4.091c0,2.258 1.833,4.091 4.091,4.091c2.258,-0 4.091,-1.833 4.091,-4.091c-0,-2.258 -1.833,-4.091 -4.091,-4.091Zm-8.182,4.909l1.637,0c0.45,0 0.818,-0.368 0.818,-0.818c-0,-0.45 -0.368,-0.818 -0.818,-0.818l-1.637,-0c-0.45,-0 -0.818,0.368 -0.818,0.818c0,0.45 0.368,0.818 0.818,0.818Zm14.727,0l1.637,0c0.45,0 0.818,-0.368 0.818,-0.818c0,-0.45 -0.368,-0.818 -0.818,-0.818l-1.637,-0c-0.45,-0 -0.818,0.368 -0.818,0.818c0,0.45 0.368,0.818 0.818,0.818Zm-7.363,-9l-0,1.637c-0,0.45 0.368,0.818 0.818,0.818c0.45,-0 0.818,-0.368 0.818,-0.818l0,-1.637c0,-0.45 -0.368,-0.818 -0.818,-0.818c-0.45,0 -0.818,0.368 -0.818,0.818Zm-0,14.727l-0,1.637c-0,0.45 0.368,0.818 0.818,0.818c0.45,0 0.818,-0.368 0.818,-0.818l0,-1.637c0,-0.45 -0.368,-0.818 -0.818,-0.818c-0.45,0 -0.818,0.368 -0.818,0.818Zm-4.099,-12.616c-0.319,-0.319 -0.843,-0.319 -1.154,0c-0.319,0.319 -0.319,0.843 0,1.154l0.867,0.867c0.319,0.319 0.843,0.319 1.154,0c0.311,-0.319 0.319,-0.843 0,-1.154l-0.867,-0.867Zm10.121,10.121c-0.319,-0.319 -0.843,-0.319 -1.154,0c-0.319,0.319 -0.319,0.843 0,1.154l0.867,0.867c0.319,0.319 0.843,0.319 1.154,-0c0.319,-0.319 0.319,-0.843 -0,-1.154l-0.867,-0.867Zm0.867,-8.967c0.319,-0.319 0.319,-0.843 -0,-1.154c-0.319,-0.319 -0.843,-0.319 -1.154,0l-0.867,0.867c-0.319,0.319 -0.319,0.843 0,1.154c0.319,0.311 0.843,0.319 1.154,0l0.867,-0.867Zm-10.121,10.121c0.319,-0.319 0.319,-0.843 0,-1.154c-0.319,-0.319 -0.843,-0.319 -1.154,0l-0.867,0.867c-0.319,0.319 -0.319,0.843 0,1.154c0.319,0.311 0.843,0.319 1.154,-0l0.867,-0.867Z' />
+      </svg>
+      <svg class="icon icon-dark" aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" width="18" height="18" style="fill:currentColor;">
+        <path d='M9,0c-4.97,0 -9,4.03 -9,9c0,4.97 4.03,9 9,9c4.97,0 9,-4.03 9,-9c0,-0.46 -0.04,-0.92 -0.1,-1.36c-0.98,1.37 -2.58,2.26 -4.4,2.26c-2.98,0 -5.4,-2.42 -5.4,-5.4c0,-1.81 0.89,-3.42 2.26,-4.4c-0.44,-0.06 -0.9,-0.1 -1.36,-0.1Z' />
+      </svg>
+    </span>
+    <select class="form-control form-control--sm theme-switcher__select" id="select-theme-mode" aria-label="Select a theme">
+      <option value="system">System</option>
+      <option value="light">Light</option>
+      <option value="dark">Dark</option>
+    </select>
+  </div>
+  <script src="https://sprucecss.com/ui/js/component/theme-switcher.js?time=1663244617224" type="module"></script>
+</body>
+
 </html>
