Update Line Height section

--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -47,5 +47,6 @@
   $font-size-base: 1.063rem,
   $font-size-ratio: 1.25,
   $container-width: 86rem,
-  $form-control-font-size: 1rem
+  $form-control-font-size: 1rem,
+  $table-padding-sm: 0.5em
 );
