--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,9 +38,15 @@ h6 {
   color: spruce.color(heading);
 }
 
-.table th,
-.table td {
-  min-width: 10rem;
+.table {
+  &--font-size-reset {
+    font-size: 1rem;
+  }
+
+  th,
+  td {
+    min-width: 10rem;
+  }
 }
 
 .anchor-heading {
