--- a/src/styles/layouts/article/_post-content.scss
+++ b/src/styles/layouts/article/_post-content.scss
@@ -12,13 +12,19 @@
     }
   }
 
-  * + h1,
-  * + h2,
+  * + h2 {
+    margin-block-start: spruce.spacer-clamp(l, xl);
+  }
+
   * + h3,
   * + h4,
   * + h5,
   * + h6 {
-    margin-block-start: spruce.spacer(l);
+    margin-block-start: spruce.spacer-clamp(m, l);
+  }
+
+  h2 + h3 {
+    margin-block-start: spruce.spacer(m);
   }
 
   .code-link {
