Add copy button

--- a/src/styles/components/_code-tab.scss
+++ b/src/styles/components/_code-tab.scss
@@ -52,7 +52,21 @@
 
   &__body {
     .prism-code {
+      @include spruce.scrollbar(
+        $size: 0.5rem,
+        $border-radius: 0.15rem
+      );
       max-height: 40rem;
+    }
+  }
+
+  &__inner {
+    position: relative;
+
+    .copy-btn {
+      inset: spruce.spacer(m) spruce.spacer(m) auto auto;
+      position: absolute;
+      z-index: 1;
     }
   }
 }
