Button font-size fix

--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -52,5 +52,6 @@
   $font-size-base: 1.063rem,
   $font-size-ratio: 1.25,
   $container-width: 88rem,
-  $form-control-font-size: 1rem
+  $form-control-font-size: 1rem,
+  $btn-font-size: 1rem
 );
