--- a/src/styles/layouts/article/_post-content.scss
+++ b/src/styles/layouts/article/_post-content.scss
@@ -47,6 +47,12 @@
     border-radius: spruce.$border-radius-sm;
   }
 
+  iframe {
+    aspect-ratio: 16 / 10;
+    height: auto;
+    width: 100;
+  }
+
   > .gatsby-image-wrapper:first-child + * {
     margin-block-start: spruce.spacer(l);
   }
