Pass down preferred theme mode to components

--- a/src/styles/components/_code-tab.scss
+++ b/src/styles/components/_code-tab.scss
@@ -64,5 +64,16 @@
     .prism-code {
       max-height: 40rem;
     }
+
+    .preview-iframe {
+      @include spruce.transition;
+      opacity: 0;
+      visibility: hidden;
+
+      &--loaded  {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
   }
 }
