--- a/src/styles/components/_site-header.scss
+++ b/src/styles/components/_site-header.scss
@@ -1,11 +1,13 @@
 @use '~sprucecss/scss/spruce';
 
 .site-header {
+  // border-bottom: 1px solid spruce.color(border);
+
   &__inner {
     align-items: center;
     display: flex;
     gap: clamp(#{spruce.spacer(xs)}, 3vw, #{spruce.spacer(l)});
-    height: 5rem;
+    height: 6rem;
     justify-content: space-between;
     position: relative;
   }
@@ -66,10 +68,6 @@
     flex-grow: 1;
     font-family: var(--doc-body-font-family);
     justify-content: flex-end;
-
-    @include spruce.breakpoint(md) {
-      justify-content: center;
-    }
 
     ul {
       @include spruce.clear-list;
