--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@ body {
 
   background-color: spruce.color(background);
   font-family: var(--doc-body-font-family);
+  font-weight: 300 !important;
 }
 
 html {
