--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@ body {
   background-color: spruce.color(background);
   font-family: var(--doc-body-font-family);
   font-weight: 300 !important;
+  overflow-x: hidden;
 }
 
 html {
@@ -85,4 +86,26 @@ h6 {
       width: 1.25rem;
     }
   }
+}
+
+.btn:not(.btn--icon) {
+  text-transform: uppercase;
+  font-size: 0.91375rem;
+  font-weight: 700;
+  padding: 1.25em 1.5em;
+}
+
+.note-bar {
+  background-color: #e0efff;
+  border-radius: 0.425rem;
+  color: #3865a9;
+  display: inline-flex;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-bottom: 1.5rem;
+  padding: 0.25em 1em;
+}
+
+main {
+  @include spruce.layout-stack(6rem);
 }
