--- a/src/styles/components/card/_getting-started.scss
+++ b/src/styles/components/card/_getting-started.scss
@@ -15,6 +15,7 @@
   transition-property: all;
   transition-timing-function: spruce.transition(timing-function);
 
+  /*
   &:hover,
   &:focus {
     background-color: spruce.color(heading);
@@ -25,6 +26,7 @@
       color: hsl(0 0% 100%);
     }
   }
+  */
 
   &__icon {
     --dimension: 4rem;
