--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -3,6 +3,7 @@
 @forward 'doc-cards';
 @forward 'site-footer';
 @forward 'hero';
+@forward 'cta';
 @forward 'card';
 @forward 'notification';
 @forward 'preview';
