--- a/src/styles/components/_site-header.scss
+++ b/src/styles/components/_site-header.scss
@@ -8,6 +8,10 @@
     height: 5rem;
     justify-content: space-between;
     position: relative;
+
+    @include spruce.breakpoint(md) {
+      height: 6rem;
+    }
   }
 
   &__logo {
