--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -12,6 +12,7 @@
   &__image {
     animation: rotate infinite 100s linear;
     transform: scale(105%);
+    animation-direction: alternate;
   }
 
   @keyframes rotate {
