--- a/src/styles/components/_site-footer.scss
+++ b/src/styles/components/_site-footer.scss
@@ -1,32 +1,30 @@
 @use '~sprucecss/scss/spruce';
 
 .site-footer {
-  background-color: hsl(261.91deg 70.82% 6.2%);
-  color: hsl(0 0% 100% / 75%);
+  background-color: hsl(260deg 70% 6%);
+  color: hsl(0 0% 100% / 85%);
   font-size: 1rem;
-  padding-block-start: spruce.spacer(xxl);
 
   &__slogen {
+    color: hsl(0 0% 100%);
     font-family: spruce.$font-family-heading;
-    font-size: spruce.responsive-font-size(
-      $size: 4rem,
-      $scaler: 30,
-      $optimal-size: '4vw + 1rem'
-    );
-    color: #fff;
-    line-height: spruce.$line-height-heading;
+    font-size: spruce.responsive-font-size(3rem, 30, '4vw + 1rem');
+    font-weight: 700;
+    line-height: calc(#{spruce.$line-height-heading} * 1.15);
     margin-block: 0 2rem;
   }
 
   &__top {
     display: grid;
     gap: spruce.spacer(l);
-    grid-template-columns: 3fr 1fr 1fr 1fr;
+    grid-template-columns: minmax(0, 3fr) repeat(3, minmax(0, 1fr));
+    padding-block: spruce.get-css-variable(--section-gap);
   }
 
   &__logo {
     display: inline-flex;
-    height: 1.75rem;
+    height: 2.5rem;
+    opacity: 0.15;
   }
 
   &__title {
@@ -41,7 +39,7 @@
     font-size: 1rem;
 
     a {
-      color: hsl(0 0% 100% / 75%);
+      color: hsl(0 0% 100% / 85%);
       text-decoration: none;
 
       &:hover,
@@ -59,7 +57,6 @@
 
   &__bottom {
     border-top: 1px solid hsl(0 0% 100% / 15%);
-    margin-block-start: spruce.spacer(xl);
     padding-block: spruce.spacer(m);
 
     @include spruce.breakpoint(md) {
