--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -15,4 +15,6 @@
 @forward 'heading';
 @forward 'getting-started';
 @forward 'code-tab';
+@forward 'accordion-list';
+@forward 'accordion-card';
 @forward 'prism';
