--- a/src/styles/layouts/_container.scss
+++ b/src/styles/layouts/_container.scss
@@ -18,4 +18,11 @@
       60rem
     );
   }
+
+  &--narrower {
+    @include spruce.layout-center(
+      clamp(spruce.spacer(m), 5vw, spruce.spacer(l)),
+      50rem
+    );
+  }
 }
