--- a/src/styles/components/_accordion-list.scss
+++ b/src/styles/components/_accordion-list.scss
@@ -1,13 +1,5 @@
 @use '~sprucecss/scss/spruce';
 
 .accordion-list {
-  &--boxed {
-    @include spruce.layout-stack(s);
-  }
-
-  &--stacked {
-    > * + * {
-      border-block-start: 1px solid spruce.color(border);
-    }
-  }
+  @include spruce.layout-stack(m);
 }
