--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -24,7 +24,10 @@
       discrete-background: hsla(206 40% 17% / 0.1),
       discrete-background-hover: hsl(262 71% 49%),
       discrete-foreground: hsl(0 0% 10%),
-      discrete-foreground-hover: hsl(0 0% 100%)
+      discrete-foreground-hover: hsl(0 0% 100%),
+      dark-background: hsl(260deg 70% 6%),
+      dark-background-hover: hsl(260deg 70% 12%),
+      dark-foreground: hsl(0 0% 100%),
     ),
     cookie: (
       background: hsl(207 95% 8%),
