Getting started card refactor

--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -15,6 +15,7 @@
 @forward 'heading';
 @forward 'getting-started';
 @forward 'code-tab';
+@forward 'text-btn';
 @forward 'accordion-list';
 @forward 'accordion-card';
 @forward 'prism';
